[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isodart"
version = "2.0.0"
description = "Independent System Operator Data Automated Request Tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pedro Sotorrio", email = "sotorrio1@llnl.gov"},
    {name = "Thomas Edmunds"},
    {name = "Amelia Musselman"},
    {name = "Chih-Che Sun"}
]
maintainers = [
    {name = "Lawrence Livermore National Laboratory"}
]
keywords = [
    "energy",
    "electricity",
    "iso",
    "caiso",
    "miso",
    "nyiso",
    "bpa",
    "spp",
    "data",
    "weather",
    "solar"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl",
    "meteostat<2.0.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0"
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinxcontrib-programoutput>=0.17"
]

[project.urls]
Homepage = "https://github.com/LLNL/ISO-DART"
Documentation = "https://iso-dart.readthedocs.io"
Repository = "https://github.com/LLNL/ISO-DART"
Issues = "https://github.com/LLNL/ISO-DART/issues"

[project.scripts]
isodart = "isodart:main"

[tool.setuptools]
packages = ["lib", "lib.iso", "lib.weather"]

[tool.setuptools.package-data]
lib = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | raw_data
  | data
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=lib",
    "--cov-report=html",
    "--cov-report=term-missing"
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "meteostat.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    "venv",
    "raw_data",
    "data"
]

[tool.coverage.run]
source = ["lib"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/lib/interactive.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
